# hckr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: labeler.yml  release-drafter-template.yml  release.yml
.github/workflows/: auto-assign.yml  build.yml  publish.yml  publish3.yml  release-drafter.yml  release.yml  tags.yml  tests.yml
dev/: CONTRIBUTING.md  DOCS.md  HOMEBREW.md  PUBLISHING.md  brew.sh
docker/: Dockerfile  test-ubuntu.sh
docs/: hatch-env-docs-requirements-sync.py  requirements.txt
docs/source/: conf.py  cron.rst  docs.rst  hash.rst  hello.rst  index.rst  info.rst
docs/source/_static/: INFO.md
docs/source/_templates/components/: nav-versions.html
docs/source/_templates/partials/: foot-socials.html
docs/source/commands/: data.rst  index.rst
docs/source/commands/azure/: azure.rst  index.rst
docs/source/commands/config/: config.rst  configure.rst  index.rst
docs/source/commands/cron/: index.rst
docs/source/commands/crypto/: fernet.rst  index.rst
docs/source/commands/data/: index.rst
docs/source/commands/database/: db.rst  index.rst
docs/source/commands/dt/: dt.rst  index.rst
docs/source/commands/env/: env.rst  index.rst
docs/source/commands/hash/: index.rst
docs/source/commands/info/: index.rst
docs/source/commands/k8s/: index.rst  namespace.rst
docs/source/commands/net/: index.rst  net.rst
docs/source/commands/others/: index.rst
docs/source/crypto/: index.rst
docs/source/developer/: index.rst
docs/source/k8s/: context.rst  index.rst  namespace.rst  pod.rst
docs/source/setup/: index.rst  shell_completion.rst
requirements/: requirements-dev.txt  requirements-docs.txt
src/devd/: __about__.py  __main__.py
src/devd/cli/: __init__.py
src/devd_cli/: __about__.py  __main__.py
src/devd_cli/cli/: __init__.py
src/hckr/: __about__.py  __init__.py  __main__.py
src/hckr/cli/: __init__.py  azure.py  config.py  configure.py  cron.py  crypto.py  data.py  db.py  dt.py  env.py  hash.py  info.py  net.py
src/hckr/cli/crypto/: __init__.py  fernet.py
src/hckr/cli/k8s/: __init__.py  context.py  namespace.py  pod.py  show.py
src/hckr/utils/: AzureUtils.py  CliUtils.py  ConfigUtils.py  CronUtils.py  CryptoUtils.py  DataUtils.py  DbUtils.py  EnvUtils.py  FileUtils.py  HashUtils.py  K8sUtils.py  Message.py  MessageUtils.py  NetUtils.py  TimeUtils.py
src/hckr/utils/config/: ConfigUtils.py  ConfigureUtils.py  Constants.py
src/hckr/utils/k8s/: K8sUtils.py  PodUtils.py
tests/: conftest.py  testUtils.py
tests/cli/: test_azure.py  test_cli.py  test_config.py  test_configure.py  test_cron.py  test_db.py  test_dt.py  test_env.py  test_hash.py  test_info.py  test_net.py
tests/cli/crypto/: test_fernet.py
tests/cli/crypto/fernet/: test_fernet_decrypt.py  test_fernet_encrypt.py
tests/cli/data/: test_faker.py  test_peek.py
tests/cli/k8s/: test_context.py  test_k8s.py  test_namespace.py  test_pod.py
tests/cli/resources/config/: .hckrcfg
tests/cli/resources/crypto/: key.txt
tests/cli/resources/crypto/decrypt/: encrypted_message.txt
tests/cli/resources/crypto/encrypt/: output.txt
tests/cli/resources/data/faker/: invalid_schema.json  schema.json
tests/cli/resources/data/peek/: Account.csv  TabSep.tsv  input.avro  input.csv  input.json  input.parquet  input.txt  input.xls  input.xlsx  json-lines.json
tests/cli/resources/hash/: test.txt
tests/utils/: test_azure_utils.py
