[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hckr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ashish Patel", email = "ashishpatel0720@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/pateash/hckr#readme"
Issues = "https://github.com/pateash/hckr/issues"
Source = "https://github.com/pateash/hckr"

# to make sure the default env is in same repo ( for Intellij to refer )
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[project.scripts]
hckr = "hckr.cli:cli"

[tool.hatch.version]
path = "src/hckr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hckr tests}"

[tool.coverage.run]
source_pkgs = ["hckr", "tests"]
branch = true
parallel = true
omit = [
  "src/hckr/__about__.py",
]

[tool.coverage.paths]
hckr = ["src/hckr", "*/hckr/src/hckr"]
tests = ["tests", "*/hckr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

## STYLING ( commenting in favour of `hatch fmt`
# creating an env for styling and use it to fix
[tool.hatch.envs.style]
dependencies = [
  "black"
]
[tool.hatch.envs.style.scripts]
lint = "black --check src/ tests/"
fix = "black -v src/ tests/"
