[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hckr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cli", "hckr", "dev-tools"]
authors = [
    { name = "Ashish Patel", email = "ashishpatel0720@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "click",
    "click-repl",
    "croniter",
    "cron-descriptor",
    "rich",
    "cryptography",
    "Faker",
    "pandas", #To manage data and save in CSV, Excel, and Parquet formats.
    "openpyxl", # For handling Excel files with Pandas.
    "xlrd",
    "pyarrow", # For saving data in Parquet format.
    "fastavro", # For handling Avro file format.
    "requests",
    "packaging",
    "kubernetes", # for k8s commands
    "yaspin",
    "speedtest-cli", # for net speed command

    # SQL Support
    "sqlalchemy", # for SQL ORM
    "psycopg2-binary", # for Postgres
    "pymysql", # for MySQL
#    "sqlite", # for SQLITE
    "snowflake-sqlalchemy",  # For Snowflake
]

[project.urls]
Documentation = "https://hckr.readthedocs.io"
Issues = "https://github.com/hckr-cli/hckr/issues"
Source = "https://github.com/hckr-cli/hckr"

# to make sure the default env is in same repo ( for Intellij to refer )
[tool.hatch.envs.default]
type = "virtual"
path = "venv"
python = "3.8"

[tool.hatch.envs.default.scripts]
deps = "echo 'Syncing Default Dependencies\n=========================='"

[project.scripts]
hckr = "hckr.cli:cli"

[tool.hatch.version]
path = "src/hckr/__about__.py"


[tool.coverage.run]
source_pkgs = ["hckr", "tests"]
branch = true
parallel = true
omit = [
    "src/hckr/__about__.py",
    "src/hckr/__main__.py",
]

[tool.coverage.paths]
hckr = ["src/hckr", "*/hckr/src/hckr"]
tests = ["tests", "*/hckr/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

## STYLING ( commenting in favour of `hatch fmt`
# creating an env for styling and use it to fix

[tool.sphinx]
builders = ["html"]
source-dir = "docs/source"
build-dir = "docs/build"

[tool.hatch.envs.dev]
dependencies = [
    "black",
    "pre-commit",
    "mypy>=1.0.0",
    "coverage",
    "pytest",
    "pypi-cleanup",
]
[tool.hatch.envs.dev.scripts]
lint = "black --check src/ tests/"
fix = "black -v src/ tests/"
check = "mypy --install-types --non-interactive {args:src/hckr tests}"
cov-xml = "coverage xml"
pypi-clean = "pypi-cleanup -u pateash -p hckr --do-it" # deletes dev version from hckr
deps = "echo 'Syncing Dev Dependencies\n============='"


[tool.hatch.envs.docs]
dependencies = [
    "sphinx-autobuild",
    "sphinx",
    "sphinx-docsearch",
    "sphinx-click",
    "shibuya",
    "sphinx-notfound-page",
    "sphinx-copybutton",
]
[tool.hatch.envs.docs.scripts]
# --pre-build makes sure we get latest changes even if we modify something in
docs = "sphinx-autobuild -a --port=0 --open-browser docs/source docs/build --watch src/hckr --pre-build 'rm -rf docs/build'"
deps = "echo 'Syncing Docs Dependencies\n============='"
docs-deps = "python docs/hatch-env-docs-requirements-sync.py"
